# s86

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: diff.rs  instruction.rs  label_parser.rs  lexer.rs  lib.rs  operands.rs  parser.rs  registers.rs  simulator.rs  simulator_error.rs  syntax_error.rs  tokens.rs
lib/tests/: add.rs  branch.rs  cmp.rs  flags.rs  jmp.rs  memory.rs  mov.rs  negative.rs  registers.rs  sub.rs  xor.rs
src/: instruction.rs  label_parser.rs  lexer.rs  lib.rs  operands.rs  parser.rs  registers.rs  simulator.rs  tokens.rs
tests/: add.rs  branch.rs  cmp.rs  flags.rs  jmp.rs  memory.rs  mov.rs  negative.rs  sub.rs  xor.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  errors.ts
web/src/lib/: Editor.svelte  Flags.svelte  Memory.svelte  Register.svelte  Registers.svelte
